[gd_scene load_steps=3 format=3 uid="uid://obs76jnahvf7"]

[ext_resource type="Script" path="res://scripts/PlayerHand.gd" id="1_n6d75"]
[ext_resource type="PackedScene" uid="uid://dwh5gejo5ju2p" path="res://scenes/Card.tscn" id="1_p063i"]

[node name="PlayerHand" type="Node3D"]
script = ExtResource("1_n6d75")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 3.375, 4.621)
fov = 62.6

[node name="HandPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.729184, -0.684318, 0, 0.684318, 0.729184, 0, 0.0826751, 4.23443)

[node name="Node3D" type="Node3D" parent="HandPivot"]

[node name="CardObject" parent="HandPivot/Node3D" instance=ExtResource("1_p063i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.025)
